seaweedfs-ton/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: seaweedfs
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/warn: baseline
