seaweedfs-ton/virtualservice.yaml
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: rustfs
  namespace: rustfs
spec:
  hosts:
    - "rustfs.lag0.com.br"
    - "*.rustfs.lag0.com.br"
  gateways:
    - istio-system/lag0-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: rustfs-release
            port:
              number: 3902
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: rustfs-s3
  namespace: rustfs
spec:
  hosts:
    - "s3.lag0.com.br"
    - "*.s3.lag0.com.br"
  gateways:
    - istio-system/lag0-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: rustfs-release
            port:
              number: 3900
